# ISO-Aligned_IoMT-FL-IDS_and_Blockchain_SAF_NS-3

./: README.md
FL-IDS/: derived_metrics_perflow.csv  iomt_comprehensive_analysis.xlsx  iomt_derived_metrics_analysis1.py  iomt_derived_stats1.py  iomt_quantify_impact_metrics212.py  iomt_quantify_impact_metrics213.py  iomt_risk_assessment_security_plan.docx  mean_metrics_by_flowID_and_type_sorted.csv  mitigations_by_flow.csv
FL-IDS/IoMT_Network_Scenarios/: CMakeLists.txt  IoMT-wifi_hex_blocksec_mitm2_sec23.cc  IoMT-wifi_wip_blocksec_mitm2_sec23.cc  run_simulations22.sh  run_simulations23.sh
FL-IDS/Results/: iomt_comprehensive_analysis.xlsx  iomt_risk_assessment_security_plan.docx
FL-IDS/Results/FlowMonitor/mitm/mitm_shs/: flowmonitor-IoMT-wifi_hex_blocksec_mitm2_sec23-mitm-seed10.xml  flowmonitor-IoMT-wifi_hex_blocksec_mitm2_sec23-mitm-seed2.xml  flowmonitor-IoMT-wifi_hex_blocksec_mitm2_sec23-mitm-seed3.xml  flowmonitor-IoMT-wifi_hex_blocksec_mitm2_sec23-mitm-seed4.xml  flowmonitor-IoMT-wifi_hex_blocksec_mitm2_sec23-mitm-seed5.xml  flowmonitor-IoMT-wifi_hex_blocksec_mitm2_sec23-mitm-seed6.xml  flowmonitor-IoMT-wifi_hex_blocksec_mitm2_sec23-mitm-seed7.xml  flowmonitor-IoMT-wifi_hex_blocksec_mitm2_sec23-mitm-seed8.xml  flowmonitor-IoMT-wifi_hex_blocksec_mitm2_sec23-mitm-seed9.xml
FL-IDS/Results/FlowMonitor/mitm/mitm_wip/: flowmonitor-IoMT-wifi_wip_blocksec_mitm2_sec23-mitm-seed10.xml  flowmonitor-IoMT-wifi_wip_blocksec_mitm2_sec23-mitm-seed2.xml  flowmonitor-IoMT-wifi_wip_blocksec_mitm2_sec23-mitm-seed3.xml  flowmonitor-IoMT-wifi_wip_blocksec_mitm2_sec23-mitm-seed4.xml  flowmonitor-IoMT-wifi_wip_blocksec_mitm2_sec23-mitm-seed5.xml  flowmonitor-IoMT-wifi_wip_blocksec_mitm2_sec23-mitm-seed6.xml  flowmonitor-IoMT-wifi_wip_blocksec_mitm2_sec23-mitm-seed7.xml  flowmonitor-IoMT-wifi_wip_blocksec_mitm2_sec23-mitm-seed8.xml  flowmonitor-IoMT-wifi_wip_blocksec_mitm2_sec23-mitm-seed9.xml
FL-IDS/Results/FlowMonitor/normal/normal_shs/: flowmonitor-IoMT-wifi_hex_blocksec3-normal-seed6.xml
FL-IDS/Results/FlowMonitor/normal/normal_wip/: flowmonitor-IoMT-wifi_wip_blocksec3-mitm-seed1.xml  flowmonitor-IoMT-wifi_wip_blocksec3-mitm-seed10.xml  flowmonitor-IoMT-wifi_wip_blocksec3-mitm-seed2.xml  flowmonitor-IoMT-wifi_wip_blocksec3-mitm-seed3.xml  flowmonitor-IoMT-wifi_wip_blocksec3-mitm-seed4.xml  flowmonitor-IoMT-wifi_wip_blocksec3-mitm-seed5.xml  flowmonitor-IoMT-wifi_wip_blocksec3-mitm-seed7.xml  flowmonitor-IoMT-wifi_wip_blocksec3-mitm-seed8.xml  flowmonitor-IoMT-wifi_wip_blocksec3-mitm-seed9.xml
FL-IDS/Results/Stats/: iomt_derived_metrics_analysis4.py
FL-IDS/Results/Stats/Stats_Results/: correlation.xlsx  device_comparison.xlsx  flowmonitor_dataset.csv  scenario_comparison.xlsx
FL-IDS/SHS/: bluetooth_energy_log_hexo.csv  comprehensive_risk_assessment_chapter6_hex.csv  energy_log_chapter6_hex.csv  flowmonitor-stats_chapter6_integrated_hex.xml  node_0_chain.csv  node_1_chain.csv  node_2_chain.csv  node_3_chain.csv  node_4_chain.csv
FL-IDS/WIP/: bluetooth_energy_log_wip.csv  comprehensive_risk_assessment_chapter6_wip.csv  flowmonitor-stats_chapter6_integrated_wip.xml  node_0_chain.csv  node_1_chain.csv  node_2_chain.csv  node_3_chain.csv  node_4_chain.csv
